update and create about.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </tr>
     </tbody>
     </table>
-    <p>hjffa fahgfha  shjfksfdfs sfsd <span>fhfhfh</span> hgdgfsfgsfgg</p>
+    <p>hjffa fahgfha  shjfksfdfs sfsd  git hub modification<span>fhfhfh</span> hgdgfsfgsfgg</p>
     <h1>sddsf</h1>
     <span>hffhfsdfsdf</span> <span>ghhgdgd</span>
     <div>
