--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <table>
         <thead>
             <tr>
-                <th>GIT Header</th>
+                <th>GIT Header ghf</th>
                 <th>Heading2</th>
                 <th>Heading3</th>
             </tr>
